6786346: intermittent Internal Error (src/share/vm/memory/cardTableModRefBS.cpp:226)

Two assertions were incorrectly composed.

Reviewed-by: tonyp